[19] fix: update page width in spacings configuration

--- a/src/styles/vars/layoutSpacings/_root.scss
+++ b/src/styles/vars/layoutSpacings/_root.scss
@@ -1,7 +1,7 @@
 :root {
   --base: 16;
   --container-gutter: 1.5rem;
-  --page-width: 2500px;
+  --page-width: 2560px;
   --padding-global: 1.5rem;
   --padding-vertical-none: 0;
   --padding-vertical-small: 2rem;
